// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggester renders empty if request fails 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
      placement="bottomLeft"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            value="test"
          />
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Suggester renders results with custom result template 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-auto-complete ant-select-single ant-select-open ant-select-show-search"
      placement="bottomLeft"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_-1"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            value="test"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div
            id="rc_select_TEST_OR_SSR_list"
            role="listbox"
            style="height: 0px; overflow: hidden;"
          >
            <div
              aria-selected="false"
              id="rc_select_TEST_OR_SSR_list_0"
              role="option"
            >
              Result 1
            </div>
          </div>
          <div
            class=""
            style="max-height: 256px; overflow-y: auto;"
          >
            <div>
              <div
                class=""
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 1
                       
                      <em>
                        Extra 1
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 2
                       
                      <em>
                        Extra 2
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
